--- a/package.json
+++ b/package.json
@@ -42,5 +42,9 @@
 		"typescript-eslint": "^8.20.0",
 		"vite": "^6.0.0",
 		"vitest": "^3.0.0"
+	},
+	"dependencies": {
+		"@fortawesome/free-brands-svg-icons": "^6.7.2",
+		"@fortawesome/svelte-fontawesome": "^0.2.3"
 	}
 }
